force-app/main/default/objects/Line_Card__c/Line_Card__c.object-meta.xml
<CustomObject>
    <description>Junction Object of Named Accounts of Retailers and Brand&apos;s Have Sold Into or Bought From.</description>
    <label>Line Card</label>
    <nameField>
        <displayFormat>LC-{YYYY}-{MM}-{00000}</displayFormat>
        <label>Line Card</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>