force-app/main/default/objects/Line_Card__c/fields/Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit__c</fullName>
    <formula>Credit_Limit__c - Total_Open_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>