force-app/main/default/objects/Line_Card__c/fields/Brand_Account_Rating__c.field-meta.xml
<CustomField>
    <fullName>Brand_Account_Rating__c</fullName>
    <label>Brand Account Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Rating</valueSetName>
    </valueSet>
</CustomField>