force-app/main/default/objects/Line_Card__c/fields/Brand_DBA__c.field-meta.xml
<CustomField>
    <fullName>Brand_DBA__c</fullName>
    <formula>Brand_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand DBA</label>
    <type>Text</type>
</CustomField>