force-app/main/default/objects/Line_Card__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Line Card</relationshipLabel>
    <relationshipName>Line_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>