force-app/main/default/objects/Line_Card__c/fields/Community_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Community_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Line Cards</relationshipLabel>
    <relationshipName>Line_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>