force-app/main/default/objects/Line_Card__c/fields/Credit_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Credit_Utilization__c</fullName>
    <formula>(Credit_Limit__c / Total_Open_Balance__c) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Utilization (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>