force-app/main/default/objects/Line_Card__c/fields/Delivery_Day__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Day__c</fullName>
    <label>Delivery Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Tue</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Thu</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>