force-app/main/default/objects/Line_Card__c/fields/Is_Brand_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Product__c</fullName>
    <formula>IF( Brand_Name__r.Id    =  $User.AccountId__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Brand Product</label>
    <type>Checkbox</type>
</CustomField>