force-app/main/default/objects/Line_Card__c/fields/Last_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sold_Date__c</fullName>
    <description>Date brand product is delivered to retailer.</description>
    <label>Last Sold Date</label>
    <type>Date</type>
</CustomField>