force-app/main/default/objects/Line_Card__c/fields/Minimum_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>