force-app/main/default/objects/Line_Card__c/fields/Minimum_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Service_Fee__c</fullName>
    <label>Minimum Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>