force-app/main/default/objects/Line_Card__c/fields/Mutual_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Payment_Terms__c</fullName>
    <label>Mutual Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Terms</valueSetName>
    </valueSet>
</CustomField>