force-app/main/default/objects/Line_Card__c/fields/Onboard_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboard_Date__c</fullName>
    <label>Onboard Date</label>
    <type>Date</type>
</CustomField>