force-app/main/default/objects/Line_Card__c/fields/Retail_Account_Rating__c.field-meta.xml
<CustomField>
    <fullName>Retail_Account_Rating__c</fullName>
    <label>Retail Account Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Rating</valueSetName>
    </valueSet>
</CustomField>