force-app/main/default/objects/Line_Card__c/fields/Retailer_DBA__c.field-meta.xml
<CustomField>
    <fullName>Retailer_DBA__c</fullName>
    <formula>Retailer_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer DBA</label>
    <type>Text</type>
</CustomField>