force-app/main/default/objects/Line_Card__c/fields/Retailer_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retailer Excluded</label>
    <type>Checkbox</type>
</CustomField>