force-app/main/default/objects/Line_Card__c/fields/Retailer_Name__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Line Card</relationshipLabel>
    <relationshipName>Line_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>