force-app/main/default/objects/Line_Card__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Line Cards</relationshipLabel>
    <relationshipName>Line_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>