force-app/main/default/objects/Line_Card__c/fields/Total_Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Balance__c</fullName>
    <label>Total Open Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>