force-app/main/default/objects/Line_Card__c/fields/Unique_Line_Card_Helper__c.field-meta.xml
<CustomField>
    <fullName>Unique_Line_Card_Helper__c</fullName>
    <label>Unique Line Card Helper</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>