force-app/main/default/objects/Line_Card__c/fields/Unique_Line_Card_Helper_v1__c.field-meta.xml
<CustomField>
    <fullName>Unique_Line_Card_Helper_v1__c</fullName>
    <description>It&apos;s a unique field with 18 digit brand name &amp; 18 digit retailer name</description>
    <formula>CASESAFEID(Brand_Name__c ) &amp; CASESAFEID(Retailer_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Line Card Helper</label>
    <type>Text</type>
</CustomField>