force-app/main/default/objects/Line_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand_Name__c</columns>
    <columns>Brand_DBA__c</columns>
    <columns>Retailer_Name__c</columns>
    <columns>Retailer_DBA__c</columns>
    <columns>Community_Price_Book__c</columns>
    <columns>Mutual_Payment_Terms__c</columns>
    <columns>Onboard_Date__c</columns>
    <columns>Retail_Account_Rating__c</columns>
    <columns>Brand_Account_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>