force-app/main/default/objects/Line_Card__c/listViews/KP_Line_Cards.listView-meta.xml
<ListView>
    <fullName>KP_Line_Cards</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Brand_DBA__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Retailer_DBA__c</columns>
    <columns>Retailer_Name__c</columns>
    <columns>Community_Price_Book__c</columns>
    <columns>Unique_Line_Card_Helper_v1__c</columns>
    <columns>Unique_Line_Card_Helper__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unique_Line_Card_Helper__c</field>
        <operation>equals</operation>
    </filters>
    <label>Duplicate Line Cards</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>